<resources>
    <string name="app_name">MyDrone</string>
    <string name="wifi_disabled">Wifi is disabled.</string>
    <string name="enable">Enable</string>
    <string name="no_nearby_device">No nearby device.</string>
    <string name="land">Land</string>
    <string name="take_off">Take Off</string>
    <string name="emergency">Emergency</string>
    <string name="battery_level_indicator">Battery level indicator</string>
    <string name="movement_up">Up</string>
    <string name="movement_down">Down</string>
    <string name="take_photo">Take a photo</string>
    <string name="movement_forward">Forward</string>
    <string name="movement_back">Back</string>
    <string name="movement_right">Right</string>
    <string name="movement_left">Left</string>
    <string name="yaw_right">Right</string>
    <string name="yaw_left">Left</string>
    <string name="picture_saved">Picture saved</string>
    <string name="control_buttons">Buttons</string>
    <string name="control_joystick">Joysticks</string>
    <string name="control_accelerometer">Accelerometer</string>
    <string name="choice_piloting_mode">Select a piloting mode</string>
    <string name="control_pathdraw">Path</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="connecting">Connecting…</string>
    <string name="error_disconnecting">Error while disconnecting</string>
    <string name="error_connecting">Error while connecting</string>
    <string name="ok">OK</string>
    <string name="path_control_explanation">Put the drone in the middle of the room.</string>
    <string name="room_dimensions">Room measurements</string>
    <string name="label_width">Width (meters)</string>
    <string name="label_length">Length (meters)</string>
    <string name="control_face">Face detection</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_me">Follow me</string>
    <string name="follow_status_waiting">Waiting for a target ...</string>
    <string name="title_detection_type">Select a detection type</string>
    <string name="radio_face">Face detection</string>
    <string name="radio_body">Body detection</string>
</resources>
