<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="fr.telecomlille.mydrone.ControllerActivity"
    tools:ignore="RtlHardcoded">

    <!-- Contrôles -->
    <ImageButton
        android:id="@+id/btn_yaw_right"
        style="@style/AppTheme.ControlButton"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/movement_right"
        app:srcCompat="@drawable/ic_turn_right_24dp" />

    <ImageButton
        android:id="@+id/btn_roll_left"
        style="@style/AppTheme.ControlButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/movement_left"
        app:srcCompat="@drawable/ic_move_left_24dp" />

    <ImageButton
        android:id="@+id/btn_yaw_left"
        style="@style/AppTheme.ControlButton"
        android:layout_below="@+id/btn_gaz_up"
        android:layout_toLeftOf="@+id/btn_gaz_up"
        android:layout_toStartOf="@+id/btn_gaz_up"
        android:contentDescription="@string/yaw_left"
        app:srcCompat="@drawable/ic_turn_left_24dp" />

    <ImageButton
        android:id="@+id/btn_roll_right"
        style="@style/AppTheme.ControlButton"
        android:layout_above="@+id/btn_back"
        android:layout_toEndOf="@+id/btn_back"
        android:layout_toRightOf="@+id/btn_back"
        android:contentDescription="@string/movement_right"
        app:srcCompat="@drawable/ic_move_right_24dp" />

    <ImageButton
        android:id="@+id/btn_gaz_up"
        style="@style/AppTheme.ControlButton"
        android:layout_above="@+id/btn_yaw_right"
        android:layout_toLeftOf="@+id/btn_yaw_right"
        android:layout_toStartOf="@+id/btn_yaw_right"
        android:contentDescription="@string/movement_up"
        app:srcCompat="@drawable/ic_gaz_up_24dp" />

    <ImageButton
        android:id="@+id/btn_gaz_down"
        style="@style/AppTheme.ControlButton"
        android:layout_below="@+id/btn_yaw_right"
        android:layout_toEndOf="@+id/btn_yaw_left"
        android:layout_toRightOf="@+id/btn_yaw_left"
        android:contentDescription="@string/movement_down"
        app:srcCompat="@drawable/ic_gaz_down_24dp" />

    <ImageButton
        android:id="@+id/btn_forward"
        style="@style/AppTheme.ControlButton"
        android:layout_alignTop="@+id/btn_gaz_up"
        android:layout_toEndOf="@+id/btn_roll_left"
        android:layout_toRightOf="@+id/btn_roll_left"
        android:contentDescription="@string/movement_forward"
        app:srcCompat="@drawable/ic_move_forward_24dp" />

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/AppTheme.ControlButton"
        android:layout_below="@+id/btn_roll_left"
        android:layout_toEndOf="@+id/btn_roll_left"
        android:layout_toRightOf="@+id/btn_roll_left"
        android:contentDescription="@string/movement_back"
        app:srcCompat="@drawable/ic_move_back_24dp" />
</RelativeLayout>